app/static/css/admin.css
.admin-main-page-area {
    padding-top: 3rem !important;
    height: 100%;
    display: flex;
    flex-direction: column;
    flex-flow: column;
}

.admin-stats-container {
    padding: 30px 20px !important;
    height: auto;
}

.admin-menu-options-container {
    padding-top: 10px;
    padding-left: 10%;
    padding-right: 10%;
    width: 100%;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.admin-menu-btn {
    flex: 1 0 40%;
    margin: 20px;
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    -ms-border-radius: 6px;
    -o-border-radius: 6px;
    font-weight: 400;
    color: #FAFAF7;
    background-color: #9AD0E0;
    border: 1px solid #279FC3;
    height: 40px;
}

.admin-menu-btn:hover {
    border: 1px solid #279FC3;
    background-color: #279FC3;
    font-weight: bold;
}

.admin-card {
    background-color:  #279FC3;
    border: 2px solid #707070;
    flex: 1 0 30%;
    border-radius: 15px;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
    margin: 0 10px;
}

.admin-stat-card-value {
    color: #F4EED7;
    justify-content: center;
    display: flex !important;
}

.admin-stat-card-label {
    color: #F4EED7;
    justify-content: center;
    display: flex !important
}

.divider {
    background-color: #abafb0;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    -o-border-radius: 2px;
}

.card-title {
    margin: 0;
}

.card {
    padding-top: 20px;
    padding-bottom: 20px;
}

.filler {
    height: 200px;
}

.admin-header {
    text-align: center;
    margin: 20px 0 40px;
    color: #043443;
}

.admin-instructions {
    color: #043443;
    margin-top: 10px;
}

.admin-search-btn {
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    -ms-border-radius: 6px;
    -o-border-radius: 6px;
    font-weight: bold;
    color: #FAFAF7;
    background-color: #279FC3;
    border: 1px solid #279FC3;
    height: 40px;
    width: 200px;
}

.admin-search-btn:hover {
    color: #FAFAF7;
    background-color: #279FC3;
    border: 1px solid #279FC3;
}

.form-control {
    background-color: #c1dfe8;
    border: #ABAFB0 1px solid;
}

#searchTerm.form-control {
    max-width: 300px;
    width: 300px;
}

.admin-search-container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.admin-search-form {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.admin-search-form.form-row {
    width: 100%;
    display: inherit;
    align-items: center;
    justify-content: space-evenly;
}

.admin-search-form.form-row.col {
    flex: 1 0 35%;
}

.admin-search-label {
    vertical-align: center;
    color: #043443;
    padding-top: 8px;
}

.admin-search-results-table {
    margin-top: 30px;
    align-self: center;
}

.admin-user-stat-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-evenly;
    width: 100%;
}

.admin-search-results-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.admin-search-results-table.truncate {
    max-width: 300px;
}


.admin-profile-header {
    display: flex;
    flex-direction: column;
    margin: 10px;
    align-items: center;
    justify-content: space-between;
}

.admin-profile-header-pic {
    width: 200px;
    height: 200px;
}

.admin-profile-user-details {
    margin: 0 20px;
    display: flex;
    flex-direction: column;
    color: #161613;
}

.admin-profile-user-detail {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.admin-profile-user-detail-label {
    font-weight: bold;
    text-align: right;
    margin-right: 2px;
}

.admin-profile-user-detail-value {
    text-align: left;
    margin-left: 3px;
}

.admin-profile-btn-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.admin-profile-boxes-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.post-box {
    display: flex;
    flex-direction: column;
    flex: 1 0 45%;
    overflow-y: scroll;
    justify-content: space-between;
    align-items: center;
}

.comment-stream {
    margin: 10px 0;
}

.admin-profile-friend-table {

}

.admin-profile-group-table {

}

img {
    width: 30px;
    height: 30px;
}
    

.comment-header{
    display: flex;
    flex-direction: column;
}

